link design process workflow to Vademecum example beam

--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -5,6 +5,17 @@
    "metadata": {},
    "source": [
     "# Global dimensioning beam\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is already clear.\n",
+    "\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is given on the left.\n",
+    "````\n",
     "\n",
     "The transverse dimensions of beams depend on the forces acting on them, but also on the length of those elements. To provide an initial estimate of the dimensions, estimation rules or key figures have been established. These estimation rules are no different from a first global approximation. They are mainly intended for usual structures with normal loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
     "\n",
@@ -16,6 +27,13 @@
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
     "\n",
+    "````{margin}\n",
+    "**Selection of material**\n",
+    "```{figure} ../safety/Images/design_process_3.jpg\n",
+    "```\n",
+    "A steel structure has been selected.\n",
+    "````\n",
+    "\n",
     "```{note}\n",
     "For the steel structure, we apply an HEA section with strength class S235. This means that the calculation value for the steel strength is equal to 235 N/mm². For steel, the modulus of elasticity E for all strength classes equals to 210 × 10³ N/mm².\n",
     "+++\n",
@@ -25,6 +43,12 @@
     "A HEA section features wide flanges, providing ample bearing width for the channel plates. Using the estimation rule, we estimate the height of a profile and note down the profile number and the data required for the verification calculation. These include: the weight of the beam per linear meter, the resistance moment $W_y$, and the quadratic area moment $I_y$.\n",
     "\n",
     "This information can be found in a steel profile table or through the Steel Profiles app by Building with Steel. Often, the table provides the mass per linear meter [kg/m]. This needs to be converted to weight per linear meter [kN/m]. To do this, we multiply the displayed number by 10 (rounding from 9.8: acceleration due to gravity in $m/s^2$) to convert from [kg] to [N], and then divide by 1000 (from N to kN). [N.B.: Integrated beams (joists) are often used with channel plates to reduce the construction height.]\n",
+    "\n",
+    "````{margin}\n",
+    "**Estimation of structural dimensions, global sizing**\n",
+    "```{figure} ../safety/Images/design_process_4.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "````{note}\n",
     "The beam has a length of 6 meters. According to the estimation rule, the estimated beam height is then:  \n",
@@ -74,6 +98,18 @@
    "metadata": {},
    "source": [
     "## Determining load on the beam\n",
+    "````{margin}\n",
+    "**Load determination**\n",
+    "```{figure} ../safety/Images/design_process_5.jpg\n",
+    "```\n",
+    "Here the loads should be determined.\n",
+    "\n",
+    "**Load determination per structural element**\n",
+    "```{figure} ../safety/Images/design_process_6.jpg\n",
+    "```\n",
+    "They are then also transferred to the elements.\n",
+    "````\n",
+    "\n",
     "De belasting op de ligger bestaat uit drie delen:\n",
     "- $q_{eg}$ = Eigen gewicht van de ligger.\n",
     "- $q_{rb}$ = Rustende belasting op de ligger, bijv. gewicht vloerconstructie, plafond, opgehangen installaties, verlichting, vloerafwerking enz.\n",
@@ -90,7 +126,7 @@
     "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "The weight of the concrete beam has also already been calculated: $q_{eg}$ = 4.5 [kN/m].\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
@@ -146,14 +182,14 @@
     "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For a concrete beam, the resting load on that beam is obviously the same as that on the steel beam:\n",
     "$q_{rb}= 39.2 [kN/m]$.\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
     "```\n",
     "\n",
-    "```{note} Static load\n",
+    "```{note}\n",
     "The imposed load for each function is prescribed in the Eurocodes. The building has an office function. The corresponding imposed load is $3 [kN/m^2]$. This load is given in [kN/m^2]. To make this a load per running metre of girder, it should also be multiplied by two times half the centre-to-centre distance. \n",
     "```\n",
     "\n",
@@ -177,9 +213,9 @@
    "metadata": {},
    "source": [
     "## Check for ULS (strength)\n",
-    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam supported at two points, we determine the maximum occurring bending stress: $sigma_{m;d}$. This must be less than the strength, that is: $sigma_{m;d} <= f_{m;d}$.\n",
+    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam supported at two points, we determine the maximum occurring bending stress: $\\sigma_{m;d}$. This must be less than the strength, that is: $\\sigma_{m;d} <= f_{m;d}$.\n",
     "\n",
-    "The bending stress $sigma_{m;d} = /frac{M_d}{W}$, where $W$ is the previously determined section modulus and $M_d$ is the maximum moment in the middle of the span (Figure 14).\n",
+    "The bending stress $\\sigma_{m;d} = \\frac{M_d}{W}$, where $W$ is the previously determined section modulus and $M_d$ is the maximum moment in the middle of the span (Figure 14).\n",
     "\n",
     "For the maximum moment: \n",
     "$M_d = /frac{1}{8} \\cdot q_d \\cdot l^2$\n",
@@ -201,6 +237,18 @@
     "If the $U.C. > 1.0$, then a stronger profile is needed. For the $W_{required}$ of the new profile, the following applies:\n",
     "\n",
     "$W_{required} = U.C. \\cdot W_{old}$\n",
+    "\n",
+    "````{margin}\n",
+    "**M-lines**\n",
+    "```{figure} ../safety/Images/design_process_7.jpg\n",
+    "```\n",
+    "The moments on the beams are determined.\n",
+    "\n",
+    "**Check ULS**\n",
+    "```{figure} ../safety/Images/design_process_8.jpg\n",
+    "```\n",
+    "Then the unity check is performed for the ULS state.\n",
+    "````\n",
     "\n",
     "```{note}\n",
     "For the steel beam, the design value of the load for the ULS check is:\n",
@@ -259,6 +307,12 @@
    "metadata": {},
    "source": [
     "## Check for SLS (stiffness)\n",
+    "\n",
+    "````{margin}\n",
+    "**Check SLS**\n",
+    "```{figure} ../safety/Images/design_process_9.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "To check the stiffness, we examine the Serviceability Limit State (SLS), also known as the stiffness of the beam. In section Serviceability Limit States section, you will find all the provisions applicable to this limit state. The stiffness determines the amount of deflection: the stiffer the beam, the less the deflection. The formulas for the deformation of standard cases (reminders) can be found in the Mechanics section. For a simply supported beam, the formula is:\n",
     "\n",
@@ -378,7 +432,12 @@
     "$0.3 [m] \\cdot 0.6 [m] \\cdot 25 [kN/m^3] = 4.5 [kN/m]$\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
-    "```"
+    "```\n",
+    "````{margin}\n",
+    "**Structural Design Ready**\n",
+    "```{figure} ../safety/Images/design_process_10.jpg\n",
+    "```\n",
+    "````"
    ]
   }
  ],
