design process workflow added to vademecum example

--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -6,6 +6,17 @@
    "source": [
     "# Global dimensioning column\n",
     "\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is already clear.\n",
+    "\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is given on the left.\n",
+    "````\n",
     "Estimation rules also exist for columns, but especially for these elements, the actual dimensions required can be very different from those found with these estimation rules. The dimensions of the column depend strongly on the buckling length. However, there is a big difference whether a column has to support an entire building with many floors or just the roof. Often, the column at ground level is the ‘dimensional’ column. A slender column with large buckling length could also be normative, even if it is not on the ground floor.\n",
     "\n",
     "```{figure} Images/Static_Scheme_Column.jpg\n",
@@ -19,6 +30,13 @@
     "\n",
     "```{figure} Images/Load_Column.jpg\n",
     "```\n",
+    "\n",
+    "````{margin}\n",
+    "**Selection of material**\n",
+    "```{figure} ../safety/Images/design_process_3.jpg\n",
+    "```\n",
+    "A steel structure has been selected.\n",
+    "````\n",
     "\n",
     "```{note}\n",
     "The imposed load on the beam and the superimposed load have already been determined in the beam's verification calculation. We found $3$ for the imposed floor load and $4.9 [kN/m^2]$ for the superimposed load on the beam. We will use the beams identified in the verification calculation. For the steel structure, this was an HE300A, strength class S355, with a weight of $0.88 [kN/m]$.\n",
@@ -40,6 +58,12 @@
     "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
     "|   staalskelet      | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |\n",
     "|   betonskelet      | 3                   | 1                   | 4.9                | 4.9                | 4.5             | 4.5            |\n",
+    "\n",
+    "````{margin}\n",
+    "**Estimation of structural dimensions, global sizing**\n",
+    "```{figure} ../safety/Images/design_process_4.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "````{note}\n",
     "The steel structure uses HEA profiles for the columns. The most heavily loaded column is the central column on the ground floor.\n",
@@ -95,6 +119,15 @@
     "\n",
     "$\\gamma_{G}$ and $\\gamma_{Q}$ are the (partial) safety factors.\n",
     "\n",
+    "````{margin}\n",
+    "**Load determination**\n",
+    "```{figure} ../safety/Images/design_process_5.jpg\n",
+    "```\n",
+    "\n",
+    "**Load determination per structural element**\n",
+    "```{figure} ../safety/Images/design_process_6.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "```{figure} Images/Table_Steel_Construction.jpg\n",
     "```\n",
@@ -108,6 +141,18 @@
    "metadata": {},
    "source": [
     "## Control calculation column (compressive strength)\n",
+    "\n",
+    "````{margin}\n",
+    "**N-lines**\n",
+    "```{figure} ../safety/Images/design_process_7.jpg\n",
+    "```\n",
+    "The normal stresses are determined\n",
+    "\n",
+    "**Check ULS**\n",
+    "```{figure} ../safety/Images/design_process_8.jpg\n",
+    "```\n",
+    "Then the unity check is performed for the ULS state.\n",
+    "````\n",
     "\n",
     "From the column, we will verify the compressive strength and determine the slenderness ratio $n$.\n",
     "\n",
@@ -226,7 +271,17 @@
     "and will therefore also be more than sufficient. Concrete columns often provide sufficient buckling safety due to their relatively large surface area.\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
-    "``` "
+    "```\n",
+    "\n",
+    "````{margin}\n",
+    "The following steps are not considered in this example.\n",
+    "**Check SLS**\n",
+    "```{figure} ../safety/Images/design_process_9.jpg\n",
+    "```\n",
+    "**Structural Design Ready**\n",
+    "```{figure} ../safety/Images/design_process_10.jpg\n",
+    "```\n",
+    "````"
    ]
   },
   {
