design process added to global dimensioning cantilever and truss beam vademecum

--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -6,6 +6,18 @@
    "source": [
     "# Global dimensioning cantilever beam\n",
     "\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is already clear.\n",
+    "\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is already given.\n",
+    "````\n",
+    "\n",
     "A cantilevered beam has at least one end unsupported. The relevant support point is moved slightly towards the center of the beam. Cantilevered beams are used, for example, in building overhangs, galleries, balconies, and canopies.\n",
     "\n",
     "Cantilevered beams can be dimensioned using an estimation rule and then tested against the standard. For the section between the support points, the same rules apply as for a normal beam on two supports. For steel, the estimation rule is: $h_{beam} = \\frac{1}{20} \\cdot l_{ov}$, where $l_{ov}$ is the length of the beam section between the support points.\n",
@@ -103,12 +115,30 @@
     "\n",
     "Below is the schematic floor plan of the third floor with the floor area supported by the cantilevered beam. $l_{ov}=6$ meters and $l_{uit} = 2$ meters. The distance between the beams is 8 meters. This is also the length of the channel plates.\n",
     "\n",
-    "\n",
     "```{figure} Images/Schematic_Load_Bearing_Floor_Plan_Cantilever_Beam.jpg\n",
     "---\n",
     "width: 500px\n",
     "---\n",
     "```\n",
+    "\n",
+    "````{margin}\n",
+    "**Selection of material**\n",
+    "```{figure} ../safety/Images/design_process_3.jpg\n",
+    "```\n",
+    "A steel structure has been selected.\n",
+    "**Estimation of structural dimensions, global sizing**\n",
+    "```{figure} ../safety/Images/design_process_4.jpg\n",
+    "```\n",
+    "**Load determination**\n",
+    "```{figure} ../safety/Images/design_process_5.jpg\n",
+    "```\n",
+    "Here the loads are determined.\n",
+    "\n",
+    "**Load determination per structural element**\n",
+    "```{figure} ../safety/Images/design_process_6.jpg\n",
+    "```\n",
+    "They are then also transferred to the elements.\n",
+    "````\n",
     "\n",
     "```{note}\n",
     "We assume a steel frame. For the beam profile, we use both estimation rules.\n",
@@ -169,6 +199,18 @@
     "| Partial factor $\\gamma_G$ for $G_{field}$ | 1.2 | $\\gamma_G$ for $G_{cant}$ | 0.9 |\n",
     "| Partial factor $\\gamma_Q$ for $Q_{field}$ | 1.5 | $\\gamma_Q$ for $Q_{cant}$ | 0 |\n",
     "\n",
+    "````{margin}\n",
+    "**M-lines**\n",
+    "```{figure} ../safety/Images/design_process_7.jpg\n",
+    "```\n",
+    "The moments on the beams are determined.\n",
+    "\n",
+    "**Check ULS**\n",
+    "```{figure} ../safety/Images/design_process_8.jpg\n",
+    "```\n",
+    "Then the unity check is performed for the ULS state.\n",
+    "````\n",
+    "\n",
     "```{note}\n",
     "The field moment due to the extreme load:\n",
     "\n",
@@ -195,6 +237,12 @@
     "```\n",
     "\n",
     "During the calculation of the maximum additional deflection of beam section A-B, the variable load should be placed on this beam section. Deformation is not a safety check, so the partial factors can be omitted, i.e., equal to 1 (and 0 for favorable variable loads).\n",
+    "\n",
+    "````{margin}\n",
+    "**Check SLS**\n",
+    "```{figure} ../safety/Images/design_process_9.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "```{note}\n",
     "Since steel does not experience creep, the additional deflection depends only on the variable load present.\n",
@@ -240,7 +288,7 @@
     "| Partial factor $\\gamma_G$ for $G_{field}$ | 1.2 | $\\gamma_G$ for $G_{cant}$ | 0.9 |\n",
     "| Partial factor $\\gamma_Q$ for $Q_{field}$ | 1.5 | $\\gamma_Q$ for $Q_{cant}$ | 0 |\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "This load combination results in the largest moment above the support point (B):\n",
     "\n",
     "$M_{st.punt;max;d}=\\frac{1}{2} \\cdot (\\gamma_G \\cdot q_G+\\gamma_Q \\cdot q_Q) \\cdot l_{uit}^2=\\frac{1}{2} \\cdot (1.2 \\cdot 40.2 [kN/m]+1.5 \\cdot 24 [kN/m]) \\cdot (2 [m])^2=168.5 [kNm]$\n",
@@ -299,6 +347,12 @@
     "```\n",
     "\n",
     "**Evaluation of Verification Calculations:**\n",
+    "\n",
+    "````{margin}\n",
+    "**Structural Design Ready**\n",
+    "```{figure} ../safety/Images/design_process_10.jpg\n",
+    "```\n",
+    "````\n",
     "\n",
     "The selected beam meets both the strength and stiffness requirements for the beam section between the supports as well as for the cantilever.\n",
     "\n",
