--- a/book/calculation_examples/concrete/truss_beam.ipynb
+++ b/book/calculation_examples/concrete/truss_beam.ipynb
@@ -82,10 +82,51 @@
     "\n",
     "## Multi-Point Load on Storey-Height Truss Beams\n",
     "\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is already clear.\n",
+    "\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is given on the left.\n",
+    "````\n",
+    "\n",
     "In a building with office functions on the 1st and 2nd floors, a large column-free space is desired on the ground floor. Therefore, storey-height truss beams are installed with a length of 36 meters and a height of 4 meters, simultaneously supporting the two floors. Some joints support a secondary floor beam. These secondary floor beams (HEA profiles) have a clear span of 10 meters. They support a steel plate concrete floor (floor thickness 225 mm) with a finishing layer, pipes, and a ceiling. The steel plates span 6 meters.\n",
     "\n",
     "```{figure} Images/Truss_Load_Bearing.jpg\n",
     "```\n",
+    "\n",
+    "````{margin}\n",
+    "**Selection of material**\n",
+    "```{figure} ../safety/Images/design_process_3.jpg\n",
+    "```\n",
+    "A steel truss is going to be calculated.\n",
+    "**Estimation of structural dimensions, global sizing**\n",
+    "```{figure} ../safety/Images/design_process_4.jpg\n",
+    "```\n",
+    "**Load determination**\n",
+    "```{figure} ../safety/Images/design_process_5.jpg\n",
+    "```\n",
+    "Here the loads should be determined.\n",
+    "\n",
+    "**Load determination per structural element**\n",
+    "```{figure} ../safety/Images/design_process_6.jpg\n",
+    "```\n",
+    "They are then also transferred to the elements.\n",
+    "\n",
+    "**N-lines**\n",
+    "```{figure} ../safety/Images/design_process_7.jpg\n",
+    "```\n",
+    "The normal forces on the truss elements are calculated\n",
+    "\n",
+    "**Check ULS**\n",
+    "```{figure} ../safety/Images/design_process_8.jpg\n",
+    "```\n",
+    "The unity check is performed for the ULS state.\n",
+    "````\n",
     "\n",
     "```{Note}\n",
     "The steel plate concrete floor has a total weight of $3.6\\ kN/m^2$. The finishing layer, pipes, and ceiling together weigh $1.8 \\ kN/m^2$. This makes the total floor weight $5.4 [kN/m^2]$.\n",
@@ -123,7 +164,18 @@
     "$\\mathsf{2 \\cdot (\\frac{1}{2}F_d + F_d + F_d + \\frac{1}{2} F_d) = 6 F_d \\cdot R_A = 6 \\cdot 718\\ kN = 4309\\ kN}$.\n",
     "+++\n",
     "{bdg-primary}`Steel`\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "````{margin}\n",
+    "The following steps are not performed in this example.\n",
+    "\n",
+    "**Check SLS**\n",
+    "```{figure} ../safety/Images/design_process_9.jpg\n",
+    "```\n",
+    "**Structural Design Ready**\n",
+    "```{figure} ../safety/Images/design_process_10.jpg\n",
+    "```\n",
+    "````\n"
    ]
   }
  ],
